testing/sqltests/tests/snapshot_tests/setops/snapshots/setops__except-multiple-columns.snap
---
source: setops.sqltest
expression: |-
  SELECT name, department FROM current_employees
      EXCEPT
      SELECT name, department FROM former_employees;
info:
  statement_type: SELECT
  tables:
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--COMPOUND QUERY
   |--LEFT-MOST SUBQUERY
   |  `--SCAN current_employees
   `--EXCEPT USING TEMP B-TREE
      `--SCAN former_employees

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0  Init            0  22   0                   0  Start at 22
   1  OpenEphemeral   0   0   0                   0  cursor=0 is_table=false
   2  OpenRead        1   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   3  Rewind          1   9   0                   0  Rewind table current_employees
   4    Column        1   1   1                   0  r[1]=current_employees.name
   5    Column        1   2   2                   0  r[2]=current_employees.department
   6    MakeRecord    1   2   3                   0  r[3]=mkrec(r[1..2]); for compound_dedupe
   7    IdxInsert     0   3   0                   8  key=r[3]
   8  Next            1   4   0                   0
   9  OpenRead        2   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
  10  Rewind          2  15   0                   0  Rewind table former_employees
  11    Column        2   1   4                   0  r[4]=former_employees.name
  12    Column        2   2   5                   0  r[5]=former_employees.department
  13    IdxDelete     0   4   2                   0
  14  Next            2  11   0                   0
  15  Rewind          0  19   0                   0  Rewind  ephemeral(compound_dedupe)
  16    Column        0   0   6                   0  r[6]=ephemeral(compound_dedupe).name
  17    Column        0   1   7                   0  r[7]=ephemeral(compound_dedupe).department
  18    ResultRow     6   2   0                   0  output=r[6..7]
  19  Next            0  16   0                   0
  20  Close           0   0   0                   0
  21  Halt            0   0   0                   0
  22  Transaction     0   1   6                   0  iDb=0 tx_mode=Read
  23  Goto            0   1   0                   0
