testing/sqltests/tests/snapshot_tests/setops/snapshots/setops__union-distinct.snap
---
source: setops.sqltest
expression: |-
  SELECT name, department FROM current_employees
      UNION
      SELECT name, department FROM former_employees;
info:
  statement_type: SELECT
  tables:
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--COMPOUND QUERY
   |--LEFT-MOST SUBQUERY
   |  `--SCAN current_employees
   `--UNION USING TEMP B-TREE
      `--SCAN former_employees

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0  Init            0  23   0                   0  Start at 23
   1  OpenEphemeral   0   0   0                   0  cursor=0 is_table=false
   2  OpenRead        1   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   3  Rewind          1   9   0                   0  Rewind table current_employees
   4    Column        1   1   1                   0  r[1]=current_employees.name
   5    Column        1   2   2                   0  r[2]=current_employees.department
   6    MakeRecord    1   2   3                   0  r[3]=mkrec(r[1..2]); for compound_dedupe
   7    IdxInsert     0   3   0                   8  key=r[3]
   8  Next            1   4   0                   0
   9  OpenRead        2   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
  10  Rewind          2  16   0                   0  Rewind table former_employees
  11    Column        2   1   4                   0  r[4]=former_employees.name
  12    Column        2   2   5                   0  r[5]=former_employees.department
  13    MakeRecord    4   2   6                   0  r[6]=mkrec(r[4..5]); for compound_dedupe
  14    IdxInsert     0   6   0                   8  key=r[6]
  15  Next            2  11   0                   0
  16  Rewind          0  20   0                   0  Rewind  ephemeral(compound_dedupe)
  17    Column        0   0   7                   0  r[7]=ephemeral(compound_dedupe).name
  18    Column        0   1   8                   0  r[8]=ephemeral(compound_dedupe).department
  19    ResultRow     7   2   0                   0  output=r[7..8]
  20  Next            0  17   0                   0
  21  Close           0   0   0                   0
  22  Halt            0   0   0                   0
  23  Transaction     0   1   6                   0  iDb=0 tx_mode=Read
  24  Goto            0   1   0                   0
